# sudachi-lib

./: .gitignore  Cargo.toml
c-lang/: Makefile
c-lang/include/: sudachi.h
c-lang/src/: main.c
cpp/: CMakeLists.txt
cpp/include/: sudachi.h
cpp/src/: main.cc
src/: lib.rs
